--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.1",
+    "react-dialog": "^1.0.2",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
