--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -10,6 +10,10 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2"
   },
   "scripts": {
