--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "react": "^16.4.1",
     "react-dialog": "^1.0.2",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.4",
+    "redux-actions": "^2.6.1",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
