--- a/reactapp.csproj
+++ b/reactapp.csproj
@@ -24,6 +24,10 @@
   <ItemGroup>
     <None Remove="ClientApp\src\components\Counter.js" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ClientApp\src\actions\" />
+    <Folder Include="ClientApp\src\reducers\" />
+  </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
